add cpython code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
-PROJECT(Serial)
+PROJECT(libSerial)
 
 file(GLOB SOURCE "src/*.c")
 file(GLOB HEADER "header/*.h")
 
 include_directories(header)
-add_executable(Serial ${SOURCE})
-
+add_executable(libSerial ${SOURCE})
 
 link_directories(/usr/local/lib)
